# platform.upstream.xorg-launch-helper

./: Makefile.am  configure.ac  display-manager-run.service.in  display-manager.service.in  project.config  xorg.service.in
packaging/: xorg-launch-helper.changes  xorg-launch-helper.spec  xorg.conf  xorg_done.service
